2025-12-07 Philipp Klaus Krause <philipp@colecovision.eu>

	* Merge _Optional branch.

2025-12-07 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCgenconstprop.cc,
	  src/SDCCicode.c,
	  src/SDCCsymt.c:
	  Steps towards a fix for bug #3898. Better diagnostics for _Optional.

2025-12-07 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCcse.c,
	  src/SDCCicode.c:
	  Steps towards a fix for bug #3898 and better diagnostics for _Optional.

2025-12-06 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCcse.c,
	  src/SDCCgenconstprop.cc,
	  src/SDCCicode.c,
	  src/SDCCopt.c,
	  support/valdiag/tests/_Optional.c:
	  Steps towards a fix for bug #3898 and better diagnostics for _Optional.

2025-12-05 Philipp Klaus Krause <philipp@colecovision.eu>

	* sdas/asz80/tz80.asm:
	  sdas Z80N test cases.

2025-12-05 Philipp Klaus Krause <philipp@colecovision.eu>

	* configure,
	  configure.ac,
	  sdas/linksrc/clean.mk,
	  sdas/linksrc/lkelf.c:
	  Replace type macros by ISO C99 typedefs.

2025-12-04 Philipp Klaus Krause <philipp@colecovision.eu>

	* configure,
	  configure.ac,
	  src/SDCCsymt.h,
	  src/SDCCval.c:
	  Replace type macros by ISO C99 typedefs.

2025-12-03 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCopt.c:
	  Fix bug #3899.

2025-12-02 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCicode.c,
	  src/SDCCopt.c,
	  support/valdiag/tests/_Optional.c:
	  Steps towards a fix for bug #3898 and better diagnostics for _Optional.

2025-12-01 Janko Stamenović

	* src/SDCCmain.c
	  Better _pipe call in Windows

2025-12-01 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCgenconstprop.cc,
	  support/valdiag/tests/bug-895992.c:
	  Improve generalized constant propagation for pointers to prepare for diagnostics based on combination of _Optional with information from generalized constant propagation analysis.

2025-11-30 Gabriele Gorla <gorlik@yahoo.com>

	* src/mos6502/tempops.c: