@@ -1,3 +1,9 @@
+2025-12-09 Gabriele Gorla <gorlik@yahoo.com>
+
+	* src/mos6502/genplus.c,
+	  src/mos6502/genminus.c:
+	  Fix bug in c90-isort.
+
 2025-12-07 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* Merge _Optional branch.
